# Ocean-OpenGL

./: CMakeLists.txt  README.md
src/: Program.cpp  Program.hpp  Shader.cpp  Shader.hpp  TextureLoader.cpp  TextureLoader.hpp  main.cpp
